--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel = "stylesheet" href="style.css">
+<script src="script.js"></script>
+</head>
+<body>
 <div class="mobile-only">
   <header>
     <nav>
@@ -15,3 +23,4 @@
     </nav>
   </header>
 </div>
+</body>
