--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
 </head>
 <body>
   <header>
-    <nav>
-      <div class="hamburger-menu">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-      </div>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <button onclick="myFunctionMenu()" class="menu-icon">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
+  <div id="myLinks">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </div>
+</header>
 </body>
